--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,41 @@
-version: '3'
+version: '3.2'
 
 services:
-    mlmutant:
+    app:
         build: .
+        hostname: mlmutant
+        environment: 
+            MONGO_URL: mongodb://mongo:27017/
         ports:
-            - "8080:8080"
-        volumes:
-            - .:/opt/app
-    data:
-        image: mongo
-        expose: 
-            - "27017"
+            - 8080:8080
+        links: 
+            - mongo
+
+    mongo:
+        image: mongo:4.4-bionic
+        hostname: mongo
         ports:
-            - "27017:27017"
+            - 27017:27017
         volumes:
             - ./data:/data/db
-        
+
+    mongo-express:
+        image: mongo-express
+        ports:
+          - 8081:8081
+        environment:
+          ME_CONFIG_MONGODB_SERVER: mongo
+        links: 
+            - mongo
+
+## Para desarrollar sobre docker
+    # dev:
+    #     image: node:12-alpine
+    #     volumes:
+    #       - ./:/app
+    #     command: tail -f /etc/hosts
+    #     working_dir: /app
+    #     ports:
+    #     - 8080:8080
+    #     links:
+    #       - mongo
