--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "description": "ml test",
   "main": "index.js",
-  
   "scripts": {
     "test": "jest --env=node --passWithNoTests --runInBand --forceExit",
     "test:coverage": "jest --coverage --env=node --detectOpenHandles",
-    "start": "node app/server.js"
+    "start": "node app/server.js",
+    "lint": "eslint app tests"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "author": "Sulpick Barbella",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/mongodb": "^3.6.16",
     "dotenv": "^9.0.2",
     "jest": "^26.6.3",
     "joi": "^17.4.0",
@@ -20,5 +25,12 @@
     "koa-router": "^10.0.0",
     "mongodb": "^3.6.6",
     "pino": "^6.11.3"
+  },
+  "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-jest": "^24.3.6",
+    "jest-extended": "^0.11.5"
   }
 }
