--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/jest": "^26.0.23",
     "@types/mongodb": "^3.6.16",
+    "compute-gcd": "^1.2.1",
     "dotenv": "^9.0.2",
     "jest": "^26.6.3",
     "joi": "^17.4.0",
